styles.css
/* Palette */

.palette {
    /* fallback vars */
    --palette-height: 150px;
    --palette-direction: row;
    --not-palette-direction: row;
    --palette-background-color: transparent;
    --palette-color: #000;
    --palette-column-flex-basis: 20px;
    --notice-duration: 2.5s;
    --palette-corners: 5px;
    
    display: flex;
    flex-direction: var(--palette-direction);
    width: 100%;
    border-radius: var(--palette-corners);
    overflow: hidden;
    cursor: pointer;
    height: var(--palette-height);
    position: relative;
}

.palette-pulse {
    animation: pulse var(--notice-duration) infinite;
    transform: scale(1);
    border: transparent 1px solid;
}

@keyframes pulse {
    50% {
        background-color: #FFFF0080;
    }
}

/* Palette Item */

.palette > div {
    display: flex;
    flex: 1;
    flex-basis: 0px;
    flex-direction: var(--not-palette-direction);
    justify-content: center;
    align-items: center;
    height: var(--palette-height);
    transition: all 0.1s ease-in-out;
    background-color: var(--palette-background-color);
    gap: 3%;
}

.palette > canvas {
    position: relative;
    transition: all 0.1s ease-in-out;
    object-fit: contain;
}

.palette > canvas.gradient {
    background: linear-gradient(to right, var(--palette-background-color));
}

.palette.paletteColumn.palette-hover > div:hover {
    flex-basis: var(--palette-column-flex-basis);
}

.palette:not(.paletteColumn).palette-hover > div:hover {
    flex-basis: 80px;
}

.palette.palette-hover > div:hover > span {
    display: block;
}

/* Palette Item Text */

.palette > div > span {
    display: none;
    text-align: center;
    font-size: 100%;
    font-weight: bold;
    color: var(--palette-color);
    user-select: none;
}

/* Drag & Drop */

.is-dragging {
    opacity: 0;
}

/* Gradient Tooltip */

.palette-tooltip {
    position: absolute;
    display: none;
    background: #000000C0;
    width: max-content;
    min-width: 100px;
    height: 40px;
    text-align: center;
    vertical-align: middle;
    font-size: 100%;
}

.palette.palette-hover > canvas:hover ~ .palette-tooltip {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Invalid Palette */

.palette > .invalid {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    height: var(--palette-height);
    width: 100%;
    background-color: #000000C0;
    border-radius: var(--palette-corners);;
}

.palette > .invalid > span {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #000;
    width: 100%;
    height: 30%;
    text-align: center;
    user-select: none;
}

/* Tabs */
.create-palette > section > .control-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5%;
    padding: .75em 0;
}

.control-container > button {
    cursor: pointer;
}

.add-colors-container {
    padding: .75em 0 0 0;
}

/* Color Picker Mode */

.select-color-picker {

}

/* Generate Mode */

.select-generate > button {
    cursor: pointer;
}

/* Image Mode Add Colors */

.select-image > .add-colors > .setting-item-control > div {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: center;
}

.select-image > .add-colors > .setting-item-control > div > div {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
}

.select-image > .add-colors > .setting-item-control > div > div > button {
    cursor: pointer;
}

.select-image > .add-colors > .setting-item-control > div > div > input[type="file"] {
    display: none;
}

.select-image > .image-preview > .setting-item-info {
    display: none;
}

/* Image Mode Preview */

.select-image > .image-preview > div {
    display: flex;
    justify-content: center;
    align-items: center;
}

.select-image > .image-preview > div > img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
    object-fit: contain;
}

.select-image > .hide-image-preview {
    display: none;
}

/* URL Mode */

.select-url > button {
    cursor: pointer;
}

/* Palette Preview */

.palette-preview {

}

/* Edit Mode */

.edit-container {
    --edit-background-color: #000000;
    --edit-color: #ffffff;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    margin: 16px 0;
    gap: 16px;
}

.edit-container > span {
    --edit-font-size: 16px;
    color: var(--edit-color);
    font-weight: bold;
    font-size: var(--edit-font-size);
    user-select: none;
}

.edit-container > .color-span-editable {
    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 20px -28px inset;
    cursor: pointer;
}

/* Color Trash Button */
.edit-container > button {
    background-color: var(--edit-background-color);
    color: var(--edit-color);
    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 20px -28px inset;
    cursor: pointer;
}

